@@ -32,38 +32,27 @@ public class UsuarioService {
         List<Usuario> usuarios = usuarioRepository.findAll();
         return usuarios.stream()
                 .map(usuarioMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<SeloDTO> getSelosByUserId(Integer id) {
         List<Selo> selos = usuarioRepository.findSelosByUsuario(id);
         return selos.stream()
                 .map(selosMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<CategoriaAcessibilidadeDTO> getCategoriasByUserId(Integer id) {
         List<CategoriaAcessibilidade> categorias = usuarioRepository.findCategoriasByUsuario(id);
         return categorias.stream()
                 .map(categoriaMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UsuarioDTO getUsuarioById(Integer id) {
         Usuario usuario = usuarioRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Usuario not found with id " + id));
         return usuarioMapper.toDTO(usuario);
-    }
-
-    public UsuarioDTO signIn(String email, String password) throws AuthenticationException {
-        Usuario usuario = usuarioRepository.findByEmail(email)
-                .orElseThrow(() -> new IllegalArgumentException("User not found with email " + email));
-
-        if (password.matches(usuario.getSenha())) {
-            return usuarioMapper.toDTO(usuario);
-        } else {
-            throw new AuthenticationException();
-        }
     }
 
     @Transactional
